@@ -409,6 +409,8 @@ Localization
 
         #LOC_BDArmory_Settings_CompetitionDistance = Competition Distance
         #LOC_BDArmory_Settings_CompetitionDuration = Competition Duration
+        #LOC_BDArmory_Settings_CompetitionIntraTeamSeparation = Intra-Team Separation
+        #LOC_BDArmory_Settings_CompetitionIntraTeamSeparationPerMember = / Member
         #LOC_BDArmory_Settings_CompetitionFinalGracePeriod = Final Grace Period
         #LOC_BDArmory_Settings_CompetitionInitialGracePeriod = Initial Grace Period
         #LOC_BDArmory_Settings_CompetitionKillTimer = Landed Kill Timer
