@@ -64,6 +64,7 @@
 - Competition:
 	- Add toggle for setting maxAltitude and GM Kill limits to ASL or AGL.
 	- Add Kill timer for GM Altitude to give violators a chance to get back to safe altitude instead of immediate kill.
+	- Add customisable fields for the intra-team separation conditions when starting competitions (default: 800m + 100m per member).
 - RWP:
 	- Fix issue causing the web API to not report scores.
 
